--- a/file_lister_navigator_selector_demo/src/main/res/values/styles.xml
+++ b/file_lister_navigator_selector_demo/src/main/res/values/styles.xml
@@ -8,4 +8,12 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <style name="full_width_button">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">0</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
 </resources>
