--- a/lib/src/main/res/layout/file_list_item.xml
+++ b/lib/src/main/res/layout/file_list_item.xml
@@ -6,6 +6,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
     <TextView
         android:id="@+id/iconView"
         android:layout_width="wrap_content"
@@ -13,9 +23,8 @@
         android:textSize="24sp"
         tools:text="📁"
         android:paddingVertical="8dp"
-        android:paddingStart="8dp"
         android:paddingEnd="0dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/checkBox"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
