Даже с отключенным checkBox-ом.

--- a/lib/src/main/res/layout/file_list_item.xml
+++ b/lib/src/main/res/layout/file_list_item.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:visibility="gone"
         tools:visibility="visible"
+        android:clickable="false"
+        android:enabled="false"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
