--- a/lib/src/main/res/layout/dialog_file_selector.xml
+++ b/lib/src/main/res/layout/dialog_file_selector.xml
@@ -40,7 +40,7 @@
         android:layout_alignBottom="@id/storageSelectorSpinner"
         android:contentDescription="@string/description_sort_button"/>
 
-    <!--<TextView
+    <TextView
         android:id="@+id/storageSelectorSpinner"
         style="@style/flns_dialog_header_button"
         android:padding="12dp"
@@ -50,9 +50,9 @@
         android:text="@string/DIALOG_title_common_mode"
         android:gravity="center_horizontal"
         android:textColor="@color/design_default_color_on_primary"
-        android:textStyle="bold" />-->
+        android:textStyle="bold" />
 
-    <Spinner
+    <!--<Spinner
         android:id="@+id/storageSelectorSpinner"
         style="@style/flns_dialog_header_button"
         android:padding="12dp"
@@ -60,8 +60,9 @@
         android:layout_toEndOf="@id/refreshButton"
         android:layout_toStartOf="@id/dialogCloseButton"
         android:gravity="center_horizontal"
+        android:background="#cca"
         android:textColor="@color/design_default_color_on_primary"
-        />
+        />-->
 
     <ImageView
         android:id="@+id/dialogCloseButton"
