Добавил картинки в список выбора хранилища.

--- a/lib/src/main/res/layout/storage_list_item.xml
+++ b/lib/src/main/res/layout/storage_list_item.xml
@@ -9,4 +9,6 @@
     android:id="@+id/storageLabelView"
     android:singleLine="true"
     android:ellipsize="end"
+    android:gravity="center_vertical"
+    android:drawableStart="@drawable/ic_storage_sd_card"
 />
