--- a/lib/src/main/res/layout/storage_list_drop_down_item.xml
+++ b/lib/src/main/res/layout/storage_list_drop_down_item.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="12dp"
-    android:paddingVertical="8dp">
+    android:padding="8dp">
 
     <include layout="@layout/storage_list_text_view" />
 
