--- a/lib/src/main/res/layout/storage_list_item_selected.xml
+++ b/lib/src/main/res/layout/storage_list_item_selected.xml
@@ -8,14 +8,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    android:textSize="14sp"
-    android:textColor="@color/text_on_write"
+    tools:text="Имя хранилища"
 
+    android:textSize="14sp"
+    android:textColor="@color/design_default_color_on_primary"
     android:singleLine="true"
     android:ellipsize="end"
     android:gravity="center_vertical"
 
-    android:drawableStart="@drawable/ic_storage_sd_card"
-
-    tools:text="Имя хранилища"
-    />
+    android:drawableStart="@drawable/ic_storage_sd_card_selected"
+    tools:background="@android:color/darker_gray"
+/>
