--- a/storage_selector/src/main/res/layout/storage_list_item.xml
+++ b/storage_selector/src/main/res/layout/storage_list_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingVertical="4dp"
-    android:id="@+id/listItemView">
+    android:id="@+id/qwerty">
 
     <ImageView
         android:id="@+id/iconView"
