--- a/lib/src/main/res/layout/storage_list_item.xml
+++ b/lib/src/main/res/layout/storage_list_item.xml
@@ -2,10 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/storageListItemView"
+    android:id="@+id/itemView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/iconView"
@@ -17,10 +18,11 @@
         tools:tint="@color/design_default_color_primary" />
 
     <TextView
-        android:id="@+id/titleView"
+        android:id="@+id/nameView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:paddingStart="8dp"
         android:textSize="14sp"
         android:textColor="@color/design_default_color_primary"
         android:singleLine="true"
