--- a/lib/src/main/res/layout/dialog_file_selector.xml
+++ b/lib/src/main/res/layout/dialog_file_selector.xml
@@ -56,9 +56,10 @@
         style="@style/flns_dialog_header_button"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@id/refreshButton"
-        tools:src="@drawable/ic_storage_sd_card"
-        android:visibility="invisible"
-        android:contentDescription="@string/description_storage_icon" />
+        android:contentDescription="@string/description_storage_icon"
+        android:visibility="visible"
+        tools:src="@drawable/ic_storage_dummy"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/dialogCloseButton"
