Revert "fix: отображение панели в диалоге выбора файла; v10.0.1-alpha, versionCode 42"
This reverts commit 341c50843fd90d1ed9080fdc3617f5b49c69a085.

--- a/lib/src/main/res/layout/dialog_file_selector.xml
+++ b/lib/src/main/res/layout/dialog_file_selector.xml
@@ -56,10 +56,9 @@
         style="@style/flns_dialog_header_button"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@id/refreshButton"
-        android:contentDescription="@string/description_storage_icon"
-        android:visibility="visible"
-        tools:src="@drawable/ic_storage_dummy"
-        tools:visibility="visible" />
+        tools:src="@drawable/ic_storage_sd_card"
+        android:visibility="invisible"
+        android:contentDescription="@string/description_storage_icon" />
 
     <ImageView
         android:id="@+id/dialogCloseButton"
