--- a/lib/src/main/res/values/styles.xml
+++ b/lib/src/main/res/values/styles.xml
@@ -27,4 +27,10 @@
         <item name="android:padding">8dp</item>
     </style>
 
+    <style name="flns_dialog_home_button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/design_default_color_primary</item>
+        <item name="android:padding">8dp</item>
+    </style>
 </resources>
