--- a/lib/src/main/res/values/colors.xml
+++ b/lib/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="file_info">#636363</color>
     <color name="text_on_white">#525252</color>
     <color name="selected_item_bg">#CECECE</color>
+    <color name="black">#000</color>
 </resources>
